chore: update endpoint url to better reflect its purpose
...and updated respective swagger yaml
